--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
 					<b>Typist</b>
 					<b>Programmer</b>
 					<b>Six Sigma Practioneer</b>
+					<b>Tech Enthusiast</b>
 				</span>
 			</h3>
 		</div>
