--- a/index.html
+++ b/index.html
@@ -343,9 +343,8 @@
             <div class="footer-distributed">
                 <div class="footer-left">
                     <p class="footer-links">
-                       
                     </p>
-                    <p class="footer-company-name">All Rights Reserved. &copy; 2023 to 2025 Design By : Raajesh</p>
+                    <p class="footer-company-name">All Rights Reserved. &copy; 2023 to 2025 Design and Published By : Raajesh</p>
                 </div>
             </div>
         </div><!-- end container -->
