--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
      <!-- Site Metas -->
     <title>Raajesh's Portfolio Website</title>  
     <meta name="keywords" content="">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="This website contains details about me for educational purpose alone">
+    <meta name="author" content="Raajesh">
 
     <!-- Site Icons -->
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
