--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
  
      <!-- Site Metas -->
     <title>Raajesh's Portfolio Website</title>  
-    <meta name="keywords" content="">
+    <meta name="keywords" content="Raajesh,ramboo-raajesh,rambo-raajesh,rajesh.ramboo-rajesh>
     <meta name="description" content="This website contains details about me for educational purpose alone">
     <meta name="author" content="Raajesh">
 
