--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 
   <!-- 🎯 Floating Buttons -->
   <div class="floating-buttons" id="floatingBtns">
-    <a href="assets/Raajesh_N_CV.pdf" class="float-btn" download>⬇️ Download CV</a>
+    <a href="assets/Raajesh.pdf" class="float-btn" download>⬇️ Download CV</a>
     <a href="https://wa.me/919566874940" target="_blank" class="float-btn">💬 WhatsApp</a>
   </div>
 
