--- a/index.html
+++ b/index.html
@@ -202,8 +202,8 @@
 
   <!-- 🎯 Floating Buttons -->
   <div class="floating-buttons" id="floatingBtns">
-    <a href="assets/Raajesh.pdf" class="float-btn" download>⬇️ Download CV</a>
-    <a href="https://wa.me/919566874940" target="_blank" class="float-btn">💬 WhatsApp</a>
+    <a href="assets/Raajesh.pdf" class="float-btn" download>Download CV</a>
+    <a href="https://wa.me/919566874940" target="_blank" class="float-btn">WhatsApp</a>
   </div>
 
   <!-- JS -->
