--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
   <!-- 🎯 Floating Buttons -->
   <div class="floating-buttons" id="floatingBtns">
     <a href="assets/Raajesh.pdf" class="float-btn" download>Download CV</a>
-    <a href="https://wa.me/919566874940" target="_blank" class="float-btn">WhatsApp</a>
+    <a href="https://wa.me/919566874940?text=Hi%20Raajesh%2C%20I%20came%20across%20your%20profile%20on%20internet%20and%20interested%20to%20discuss%20about%20the%20opportunities" target="_blank" class="float-btn">WhatsApp</a>
   </div>
 
   <!-- JS -->
